client/src/app.scss
// @import "https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css";

// Theme

$light-primary: #E7E9DB;
$light-secondary: #A24936;
$light-text: #282B28;
$light-action: #D36135;

$dark-primary: #282B28;
$dark-secondary: #3E5641;
$dark-text: #E7E9DB;
$dark-action: #83BCA9;

@mixin shared {
  --light: #E7E9DB;

  --error: #E03333;
  --info: #2981CE;
  --warn: #BAC138;
}

.light-theme {
  --primary: #{$light-primary};
  --secondary: #{$light-secondary};
  --text: #{$light-text};
  --action: #{$light-action};

  @include shared;
}

.dark-theme {
  --primary: #{$dark-primary};
  --secondary: #{$dark-secondary};
  --text: #{$dark-text};
  --action: #{$dark-action};

  @include shared;
}

// Global

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html, body {
  min-height: 100%;
  background: var(--primary);
  color: var(--text);
}

#app {
  width: 100%;
  height: 100%;

  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.app-view {
  width: 100%;
  height: 100%;
  margin-top: 10px;
}

// Util

.center {
  display: flex;
  justify-content: center;
  align-items: center;
}

// Form Styles

.form-control {
  height: 50px;
  background: none;
  border: none;
  font-size: 20px;

  color: var(--text);
  border-bottom: 2px solid var(--secondary);

  margin-bottom: 10px;

  &:focus {
    border-bottom: 2px solid var(--action);
  }
}

.form-submit {
  height: 50px;
  border: none;
  border-radius: 10px;
  background: var(--secondary);
  color: var(--light);
  font-size: 20px;

  width: 50%;
  margin: 0 auto;
  cursor: pointer;
}

input:focus {
  outline: none;
}

